# bp2-project

./: .gitignore  NOTES.md  README.md  main.py  pyproject.toml
examples/: input.json  results.txt
examples/queries/: complex_01.txt  complex_02.txt  complex_03.txt  complex_04.txt  complex_05.txt  complex_06.txt  complex_07.txt  complex_08.txt  complex_09.txt  complex_10.txt  query1.txt  simple_01.txt  simple_02.txt  simple_03.txt  simple_04.txt  simple_05.txt  simple_06.txt  simple_07.txt  simple_08.txt  simple_09.txt  simple_10.txt
src/catalog/: loader.py  model.py
src/cost/: index_matcher.py  join.py  misc.py  selection.py  selectivity.py  sort.py
src/optimizer/: enumerator.py  planner.py
src/plan/: nodes.py  printer.py
src/semantic/: analyzer.py
src/sqlparser/: parser.py  query_ast.py  tokenizer.py
tests/: test_catalog.py  test_index_matcher.py  test_join_cost.py  test_misc_cost.py  test_multi_predicate_join_cardinality.py  test_optimizer.py  test_parser.py  test_printer.py  test_selection_cost.py  test_selectivity.py  test_semantic.py  test_slide_example.py  test_sort_cost.py  test_split_fit_materialization.py  test_zadatak_osoba_automobil.py  test_zadatak_radi.py  test_zadatak_radi_2024.py  test_zadatak_radi_petar.py  test_zadatak_utakmica.py
tests/fixtures/: multi_predikat_join.json  slajd_profesor_predaje.json  zadatak_osoba_automobil.json  zadatak_radi_2024.json  zadatak_radi_petar.json  zadatak_radi_zaposleni.json  zadatak_utakmica_fudbaler_igrao.json
tests/fixtures/upiti/: bad_nevalidan_operator.sql  bad_or.sql  bad_pet_tabela.sql  (+11 more)
