[project]
name = "mini-sql-query-optimizer"
version = "1.0.0"
description = "Mini optimizator SQL upita - bira najbolji plan evaluacije sa cenom u blok transferima"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
